# hello-sparql

./: README.md  docker-compose.yml
.github/workflows/: README.md  test-api.yml  test-ui.yml
api/: Dockerfile  README.md  logging.yaml  pyproject.toml
api/app/: __init__.py  main.py
api/app/routers/: prefixes.py  shacl.py  sparql.py
api/example-files/: data.ttl  query.rq  query.txt  shapes.ttl
api/tests/: __init__.py  test_main.py  test_prefixes.py  test_shacl.py  test_sparql.py
ui/: .coverage  .gitignore  Dockerfile  README.md  SETUP_COMPLETE.md  TESTING.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup-react-ui.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts
ui/app/: __init__.py  sparql_query.py
ui/apps/web/: .env.example  .env.production  index.html  package.json  tsconfig.json  vite.config.ts
ui/apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
ui/apps/web/src/__tests__/: App.test.tsx
ui/apps/web/src/components/: QueryExplorer.tsx  RDFExplorer.tsx
ui/apps/web/src/components/__tests__/: QueryExplorer.test.tsx  RDFExplorer.test.tsx
ui/apps/web/src/constants/: queries.ts
ui/apps/web/src/hooks/: usePrefixes.ts  useSHACLValidation.ts  useSPARQLQuery.ts
ui/apps/web/src/hooks/__tests__/: useSPARQLQuery.test.tsx
ui/tests/: __init__.py  test_sparql_query.py
